2002-07-17  Dietmar Maurer  <dietmar@ximian.com>

	* marshal.c (mono_delegate_to_ftnptr): invoke the right method
	(fix bug #27695)
	(mono_marshal_get_native_wrapper): allow byref arguments

Tue Jul 16 19:00:57 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* reflection.c: fix buglet in parsing an assembly name.

2002-07-16  Dietmar Maurer  <dietmar@ximian.com>

	* marshal.c (emit_ptr_to_str_conv): first impl.

Tue Jul 16 12:39:33 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* object.c, class.h: cache the vtable in the class as suggested by
	vargaz@freemail.hu (Zoltan Varga).

Tue Jul 16 11:27:57 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* class.h, loader.c: added mono_field_from_token().
	* verify.c: first cut of type checking code.

2002-07-16  Dietmar Maurer  <dietmar@ximian.com>

	* marshal.c (mono_marshal_get_native_wrapper): support valuetypes

2002-07-15  Dietmar Maurer  <dietmar@ximian.com>

	* marshal.c (mono_marshal_get_native_wrapper): handle enum types
	(fix bug #27782)
	(mono_marshal_get_remoting_invoke): impl.
	(mono_delegate_begin_invoke): impl.
	(mono_mb_emit_save_args): impl.
	(mono_delegate_end_invoke): impl.
	(mono_marshal_get_delegate_begin_invoke):
	(mono_marshal_get_delegate_end_invoke):
	(mono_marshal_get_delegate_invoke): generate a special name for
	those methods (including the signature) and associate them whith
	the delegate class. 

2002-07-13  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* reflection.[ch]: 
	(mono_reflection_type_from_name): now it has a MonoImage parameter
	which is used as the default image to search the type in. If the image
	is NULL or getting the type from it fails, it defaults to corlib.

	* icall.c: changed 1 call to mono_reflection_type_from_name to match
	new parameter.

Sat Jul 13 19:32:19 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* reflection.c: update the parameter table index.

Sat Jul 13 17:34:23 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* domain.c: don't include the mark byte in the string hash.
