@@ -3,6 +3,9 @@
 	* marshal.c (mono_delegate_to_ftnptr): invoke the right method
 	(fix bug #27695)
 	(mono_marshal_get_native_wrapper): allow byref arguments
+	(ves_icall_System_Runtime_InteropServices_Marshal_PtrToStringXXX):
+	impl. PtrToStringXXX methods
+	(ves_icall_System_Runtime_InteropServices_Marshal_PtrToStructure_type): impl.
 
 Tue Jul 16 19:00:57 CEST 2002 Paolo Molaro <lupus@ximian.com>
 
